--- a/4326:2013.md
+++ b/4326:2013.md
@@ -1,167 +1,177 @@
-# Detailed Summary of Indian Standard IS 4326:2013: Earthquake Resistant Design and Construction of Buildings
+# Detailed Summary of IS 4326:2013
+
+**Earthquake Resistant Design and Construction of Buildings – Code of Practice (Third Revision)**  
+This Indian Standard provides guidelines for designing and constructing buildings that can resist earthquake forces. It covers conventional building types including those constructed with masonry (using rectangular units), timber, and structures with precast flooring/roofing elements. Separate standards exist for low-strength masonry and earthen buildings.
 
 ---
 
-## **Clause 1: Scope**  
-- **Applicability**:  
-  - Applies to residential, commercial, and industrial buildings up to **three stories** in seismic zones.  
-  - Covers **masonry, timber, steel, and precast concrete** structures.  
-- **Exclusions**:  
-  - High-rise buildings (covered under **IS 1893**).  
-  - Critical infrastructure like bridges, dams, and nuclear plants (governed by specialized codes).  
-- **Objective**: Ensure life safety by minimizing collapse risk during earthquakes.  
+## 1. Scope  
+- **1.1 General Scope:**  
+  - Addresses material selection, design features, and construction practices for earthquake resistant buildings.
+  - Applies to conventional building types such as masonry (brick/stone/RC masonry), timber, and buildings with prefabricated components.
+- **1.2 Exclusions:**  
+  - Buildings using low-strength masonry or earthen construction are covered in separate standards.
 
 ---
 
-## **Clause 2: References**  
-- **Linked Standards**:  
-  - **IS 1893 (Part 1)**: Defines seismic zones, design spectra, and base shear calculations.  
-  - **IS 13920**: Specifies ductile detailing for reinforced concrete (e.g., stirrup spacing, lap lengths).  
-  - **IS 13828**: Guidelines for improving masonry building resilience.  
-  - **IS 456**: Code of practice for plain and reinforced concrete.  
-- **Purpose**: Ensure harmonized compliance with material, design, and construction standards.  
+## 2. References  
+- The standard incorporates provisions from several other Indian Standards, including:  
+  - **IS 456:** Plain and reinforced concrete – Code of practice.  
+  - **IS 883:** Code of practice for design of structural timber in buildings.  
+  - **IS 1077, IS 2185 (Part 1):** Specifications for building bricks and concrete blocks.  
+  - **IS 1893 (Part 1):** Criteria for earthquake resistant design of structures.  
+  - **IS 13920:** Ductility detailing of reinforced concrete structures subjected to seismic forces.  
+  - And others related to fire safety, foundation design, and welding practices.
 
 ---
 
-## **Clause 3: Terminology**  
-- **Key Definitions**:  
-  - **Seismic Zones**: India divided into **Zones II (lowest) to V (highest seismicity)**.  
-  - **Horizontal Bands**: Reinforced concrete/wood elements at **plinth, lintel, and roof levels** to tie walls.  
-  - **Ductility**: Ability of materials (e.g., steel) to undergo plastic deformation without rupture.  
-  - **Retrofitting**: Structural upgrades (e.g., adding shear walls) to enhance seismic performance.  
+## 3. Terminology  
+- **Separation Section:**  
+  - A gap between adjacent buildings or parts of the same building to avoid collision (pounding) during an earthquake.
+- **Crumple Section:**  
+  - A gap filled with material designed to crumple or fracture in an earthquake, thereby dissipating energy.
+- **Centre of Rigidity:**  
+  - The point in a structure where lateral forces produce equal deflections.
+- **Shear Wall & Box System:**  
+  - A shear wall resists lateral loads in its plane; a box system uses walls that also act as the load-resisting system.
+- **Band:**  
+  - A reinforced runner (RC or brickwork) provided in walls to tie them together and impart horizontal strength.
+- **Seismic Coefficients:**  
+  - The basic and design horizontal seismic coefficients used for calculating earthquake forces based on the seismic zone (as defined in IS 1893).
 
 ---
 
-## **Clause 4: General Design and Construction Requirements**  
-1. **Symmetry and Regularity**:  
-   - Avoid **irregular shapes, reentrant corners, or abrupt changes in stiffness** (e.g., setbacks).  
-   - Ensure uniform distribution of mass and stiffness to prevent torsion.  
-2. **Load Path Continuity**:  
-   - Design a clear path for seismic forces from roof → walls → foundations.  
-   - Avoid discontinuous load-bearing elements.  
-3. **Material Specifications**:  
-   - Use **ductile materials** (e.g., reinforced masonry, steel).  
-   - Prohibit brittle materials like **unreinforced masonry** in high seismic zones.  
-4. **Workmanship**:  
-   - Mandatory supervision during construction.  
-   - Ensure proper curing of concrete/mortar (minimum 7 days).  
-   - Use **1:4 to 1:6 cement-sand ratio** for masonry mortar.  
+## 4. General Principles  
+- **Lightness:**  
+  - Minimize the building’s weight, especially in roofs and upper storeys, to reduce seismic forces.
+- **Continuity of Construction:**  
+  - Ensure all parts of the building are tied together so that the structure behaves as a single unit.
+- **Avoidance of Projecting/Suspended Parts:**  
+  - Projecting elements should be minimized or, if necessary, adequately reinforced and tied to the main structure.
+- **Building Configuration:**  
+  - Prefer symmetrical, rectangular plans to align the centres of mass and rigidity; if asymmetry exists, provide separation or crumple sections to mitigate torsion.
+- **Strength & Ductility:**  
+  - Structural elements and connections must be designed for ductile failure, enabling energy absorption without sudden collapse. Reinforcement details should follow IS 13920.
+- **Foundation & Soil Conditions:**  
+  - Buildings must be founded on soils that do not subside or liquefy; special attention is given to foundation continuity and connection.
 
 ---
 
-## **Clause 5: Site Selection and Foundations**  
-1. **Site Selection**:  
-   - Avoid **slopes > 30°, riverbanks, liquefaction-prone soils**, and reclaimed land.  
-2. **Foundation Design**:  
-   - **Strip Footings**: Minimum depth of 1m below ground level.  
-   - **Raft Foundations**: Recommended for soft soils.  
-   - **Pile Foundations**: For loose, water-saturated soils.  
-3. **Tie Beams**:  
-   - **Plinth Beams**: Connect all footings; use **150mm x 200mm (min)** cross-section with 4×8mm bars.  
-4. **Soil Compaction**:  
-   - Compact soil to ≥95% Proctor density to prevent differential settlement.  
+## 5. Special Construction Features  
+### 5.1 Separation of Adjoining Structures  
+- **Purpose:**  
+  - Prevent collision (pounding) during an earthquake by maintaining proper gap widths.
+- **Requirements:**  
+  - Minimum gap widths are specified (with reference to a table) based on the construction type and design seismic coefficient.
+- **Dynamic Considerations:**  
+  - For taller buildings (e.g., >40 m), dynamic analysis may be required to determine appropriate gap widths.
+
+### 5.2 Separation or Crumple Sections  
+- **For Framed Constructions:**  
+  - Structural members are duplicated on either side of the separation or crumple section, or the adjacent portions are designed to act as cantilevers.
+- **Detailing:**  
+  - Typical joint and connection details are provided (with reference to figures and IS 3414).
+
+### 5.3 Foundations  
+- **General Approach:**  
+  - Follow IS 1904 and IS 1893 (Part 1) for foundation design.
+- **Soil Uniformity:**  
+  - Ideally, the subgrade should be uniform; otherwise, separation or crumple sections may be necessary.
+- **Special Measures:**  
+  - In soft soils, measures like sand piling or soil stabilization are recommended.
+- **Isolated Footings:**  
+  - Individual footings must be connected by RC ties (with specified minimum dimensions) to prevent differential movement.
+
+### 5.4 Roofs and Floors  
+- **Flat Roofs/Floors:**  
+  - Should not be made of loosely supported materials; proper blocking, bridging, and securement of joists are essential.
+- **Pitched Roofs:**  
+  - Preference is given to materials (e.g., corrugated iron or asbestos sheets) that are light and securely anchored.
+
+### 5.5 Staircases  
+- **Types:**  
+  - Separated staircases (with sliding joints), built-in staircases (with rigid enclosures), or staircases with sliding joints are detailed to prevent inadvertent bracing effects on the floor system.
 
 ---
 
-## **Clause 6: Masonry Buildings**  
-1. **Wall Construction**:  
-   - **Minimum Thickness**: 200mm for load-bearing walls.  
-   - **Vertical Reinforcement**:  
-     - 6mm steel bars at corners, junctions, and every 1.5m.  
-     - Extend reinforcement into foundations and roof bands.  
-2. **Horizontal Bands**:  
-   - **Types**: Plinth, lintel, roof, and sill bands (if openings exceed 600mm).  
-   - **Specifications**:  
-     - **Concrete Bands**: 75mm thick with 2×6mm bars.  
-     - **Spacing**: ≤1.2m vertically.  
-3. **Openings**:  
-   - Max width = 1/3rd of wall length.  
-   - Distance from corner ≥600mm.  
-4. **Through Stones**:  
-   - Use in stone masonry at **600mm vertical** and **1.2m horizontal** intervals.  
+## 6. Types of Construction  
+### 6.1 Framed Construction  
+- **Vertical Load Carrying Frame:**  
+  - Consists of frames with hinged joints and bracing; common in steel and timber buildings.
+- **Moment Resistant Frames with Shear Walls:**  
+  - Combines frames with rigid shear walls to resist lateral forces. Frames are designed to carry a specified minimum percentage of the lateral load.
+  
+### 6.2 Box Type Construction  
+- **Definition:**  
+  - Uses continuous masonry walls (or a combination of prefabricated/in-situ masonry) that act both as vertical load carriers and as lateral force resisting elements.
 
 ---
 
-## **Clause 7: Timber Construction**  
-1. **Connections**:  
-   - Use **galvanized steel straps, brackets, or bolts** at joints.  
-   - Avoid traditional notched joints (prone to splitting).  
-2. **Bracing**:  
-   - Install **diagonal braces** in walls (45° angle) and roofs.  
-   - Braces should resist both tension and compression.  
-3. **Anchorage**:  
-   - Fix timber frames to foundations using **12mm anchor bolts** at 1.5m spacing.  
-4. **Material Quality**:  
-   - Use **seasoned timber** (moisture content <19%).  
-   - Apply preservatives against termites and decay.  
+## 7. Categories of Buildings  
+- **Classification:**  
+  - Buildings are categorized (Categories B to E) based on the seismic zone and the building’s importance factor.
+- **Usage:**  
+  - These categories determine the specific seismic detailing and strengthening measures required.
 
 ---
 
-## **Clause 8: Steel Construction**  
-1. **Ductile Detailing**:  
-   - Use **compact sections** (width-thickness ratio ≤13 for flanges) to prevent buckling.  
-2. **Connections**:  
-   - **Welded Joints**: Ensure full penetration welds.  
-   - **Bolted Joints**: Use high-strength friction-grip bolts.  
-3. **Bracing Systems**:  
-   - **Vertical Bracing**: In bays adjacent to staircases.  
-   - **Horizontal Bracing**: At roof and intermediate floors.  
-4. **Fire Protection**:  
-   - Apply **intumescent coatings** or concrete encasement to maintain strength during fires.  
+## 8. Masonry Construction with Rectangular Masonry Units  
+### 8.1 Masonry Units and Mortar  
+- **Units:**  
+  - Well-burnt bricks, concrete blocks, or stone masonry may be used, with strength requirements based on the number of storeys and wall thickness.
+- **Mortar:**  
+  - Specified mortar mixes are recommended for proper bonding and strength.
+
+### 8.2 Masonry Walls  
+- **Bearing Walls:**  
+  - Should be reinforced (where necessary) and designed to resist lateral loads; wall thickness and symmetry are important.
+- **Openings:**  
+  - Guidelines for the size, position, and reinforcement of openings (doors, windows) are provided to maintain structural integrity.
+
+### 8.3 Strengthening Arrangements  
+- **Reinforcement Bands:**  
+  - Lintel bands, roof bands, and gable bands are provided to tie walls together and improve horizontal strength.
+- **Vertical Reinforcement:**  
+  - Vertical bars at corners, junctions, and jambs of openings are specified (with reference to tables and figures) to enhance ductility.
+- **Detailed Requirements:**  
+  - Tables specify minimum reinforcement details based on building category and number of storeys.
 
 ---
 
-## **Clause 9: Precast Concrete Construction**  
-1. **Joints**:  
-   - Design for **flexibility** using **dowels, grouted sleeves, or welded plates**.  
-   - Ensure joint capacity ≥80% of member strength.  
-2. **Ties and Anchors**:  
-   - Anchor precast walls to foundations with **16mm dowels** at 1m spacing.  
-3. **Handling**:  
-   - Lift precast elements using **lifting hooks embedded during casting**.  
-   - Avoid impact during transport.  
+## 9. Floors/Roofs with Small Precast Components  
+### 9.1 Types of Precast Systems  
+- **Precast Unit Systems:**  
+  - Includes precast reinforced concrete unit roofs/floors, cored units, and plank-and-joist systems.
+- **Prefabricated Brick Panels:**  
+  - Systems using brick panels with a structural deck are described.
+- **Waffle Units:**  
+  - Precast waffle units are used for larger spans, with details on shear keys and joint reinforcement.
+
+### 9.2 Seismic Resistance Measures  
+- **Tie Beams and Deck Concrete:**  
+  - Tie beams are provided around the perimeter of the floor/roof to create a diaphragm effect.
+- **Reinforcement Details:**  
+  - Specific provisions for top reinforcement, deck concrete quality, and connection details are provided to ensure proper load transfer between precast components.
 
 ---
 
-## **Clause 10: Retrofitting of Existing Buildings**  
-1. **Assessment**:  
-   - Conduct **non-destructive tests** (ultrasonic, rebound hammer) to identify cracks/weak zones.  
-2. **Techniques**:  
-   - **Jacketing**:  
-     - **Concrete Jacketing**: Add 75mm thick concrete with 8mm bars around columns.  
-     - **Steel Jacketing**: Wrap columns with 6mm steel plates.  
-   - **Shear Walls**: Install new RCC walls at building corners.  
-   - **Cross Bracing**: Add steel braces in open frames.  
-3. **Foundation Strengthening**:  
-   - **Underpinning**: Extend foundation depth with micro-piles.  
-   - **Grouting**: Inject epoxy into cracked foundations.  
+## 10. Timber Construction  
+### 10.1 General Guidelines  
+- **Material & Design:**  
+  - Timber construction must conform to IS 883, with emphasis on lightness, strength, and proper connection detailing.
+- **Storey Limits:**  
+  - Typically restricted to two storeys (with or without an attic floor).
+
+### 10.2 Framing Systems  
+- **Stud Wall Construction:**  
+  - Timber studs and posts form load-bearing walls; maximum spacing and minimum sizes are specified (with reference to tables).
+- **Brick Nogged Timber Frame:**  
+  - Combines timber framing with infill brickwork; proper integration is required to ensure overall ductility and continuity.
+- **Connections:**  
+  - Details for tying the superstructure to the foundation (e.g., using isolated column footings or rigid connections) are provided.
 
 ---
 
-## **Clause 11: Non-Structural Components**  
-1. **Parapets and Chimneys**:  
-   - Limit parapet height to 1m; reinforce with vertical steel ties.  
-2. **Partitions**:  
-   - Use lightweight materials (e.g., gypsum boards).  
-   - Fix partitions to floors/ceilings with **slotted angles and flexible sealants**.  
-3. **Services**:  
-   - Secure pipes and ducts with **braces at 1.5m intervals**.  
-   - Use **flexible couplings** for plumbing.  
-4. **False Ceilings**:  
-   - Suspend with **diagonal wires** and allow 25mm seismic gaps at edges.  
+## Conclusion  
+IS 4326:2013 establishes a comprehensive framework for designing and constructing earthquake resistant buildings. By specifying detailed provisions for material selection, structural detailing, and construction practices across masonry, precast, and timber systems, the standard ensures that buildings can absorb seismic energy and maintain structural integrity during earthquakes. Engineers are provided with clear guidelines—from overall principles to specific reinforcement details—to achieve safe, resilient structures.
 
----
-
-## **Annexures (A–E)**  
-- **Annex A**: Design examples for horizontal bands (e.g., reinforcement details for lintel bands).  
-- **Annex B**: Testing protocols for mortar strength and steel ductility.  
-- **Annex C**: Case studies on retrofitting school buildings in Zone V.  
-- **Annex D**: Checklist for supervisors (e.g., verifying band placement, curing).  
-- **Annex E**: Diagrams for bracing systems in timber/steel structures.  
-
----
-
-## **Key Philosophy**  
-- **Life Safety Focus**: Prioritizes preventing collapse over minimizing minor damage.  
-- **Hybrid Approach**: Combines traditional practices (e.g., horizontal bands) with modern engineering (e.g., ductile detailing).  
-- **Integration with Other Codes**: Requires alignment with **IS 1893** (seismic loads) and **IS 13920** (concrete ductility) for comprehensive safety.  
